k8s/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-public-api-1-deployment
  labels:
    app: ecommerce-public-api-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce-public-api-1
  template:
    metadata:
      labels:
        app: ecommerce-public-api-1
    spec:
      containers:
        - name: ecommerce-public-api-1
          image: 052758471237.dkr.ecr.ap-south-1.amazonaws.com/promotion-assessment/ecommerce-public-api-1:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-public-api-1-clusterip
spec:
  selector:
    app: ecommerce-public-api-1
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 80
